Add click listeners

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="navigation_item_home">Главная</string>
     <string name="navigation_item_favourites">Избранное</string>
     <string name="navigation_item_profile">Профиль</string>
+    <string name="post_content">"Кричу: единственным разработчиком AnduinOS, дистрибутива Linux с интерфейсом как у Windows 11, оказался сотрудник Microsoft Андуин Сюэ"</string>
 </resources>
