--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">VKFeed</string>
+    <integer name="com_vk_sdk_AppId">53716758</integer>
     <string name="navigation_item_home">Главная</string>
     <string name="navigation_item_favourites">Избранное</string>
     <string name="navigation_item_profile">Профиль</string>
